config 설정 url 변경

--- a/_config.yml
+++ b/_config.yml
@@ -3,12 +3,12 @@ title: Jun`s Blog
 email: zlsl7343@gmail.com
 description: Jun`s Development Blog
 baseurl: ""
-url: "http://nandomoreira.me"
+url: "https://jun7343.github.io"
 
 author:
   name     : 'Jun Yu'
   email    : zlsl7343@gmali.com
-  url      : http://nandomoreira.me
+  url      : https://jun7343.github.io
   facebook : https://www.facebook.com/ohohoh333/
 
 github: https://github.com/jun7343
