--- a/_config.yml
+++ b/_config.yml
@@ -1,28 +1,92 @@
-# Site settings
-title: Jun`s Blog
-email: zlsl7343@gmail.com
-description: Jun`s Development Blog
+#
+# This file contains configuration flags to customize your site
+#
+
+# Name of your site (displayed in the header)
+name: Jun`s Blog
+
+# Short bio or description (displayed in the header)
+description: Jun Development Blog
+
+# URL of your avatar or profile pic (you could use your GitHub profile pic)
+avatar: https://avatars.githubusercontent.com/u/47776520?v=4
+
+#
+# Flags below are optional
+#
+
+# Your website URL (e.g. https://forever-jekyll.github.io or https://forever-jekyll.com)
+# Used for Sitemap.xml and your RSS feed
+url: https://jun7343.github.io/
+
+# If you're hosting your site at a Project repository on GitHub pages
+# (http://yourusername.github.io/repository-name)
+# and NOT your User repository (http://yourusername.github.io)
+# then add in the baseurl here, like this: "/repository-name"
 baseurl: ""
-url: "https://jun7343.github.io"
 
-author:
-  name     : Jun Yu
-  email    : zlsl7343@gmali.com
-  url      : https://jun7343.github.io
-  facebook : https://www.facebook.com/ohohoh333/
+# Navigation menu
+navigation_links:
+  - title: Blog
+    url: /
 
-github: https://github.com/jun7343
-disqus_shortname: jun-dev-blog
-#google_analytics: UA-52446115-1
+  - title: About
+    url: /about
 
-paginate: 10
-comments: true
-paginate_path: "/page/:num"
+  - title: Search
+    url: /search
 
+# Footer icons
+footer_links:
+  - title: Feed
+    url: feed.xml
+    icon: fa fa-rss-square
+
+  - title: GitHub
+    url: https://github.com/jun7343
+    icon: fa fa-github-square
+
+# Enter your copyright text if you wish to override the default one.
+#copyright: "This site is made with <3 by *me, myself, and I*."
+
+#
+# !! You don't need to change any of the configuration flags below !!
+#
+
+permalink: pretty
+
+# Jekyll 3 now only supports Kramdown for Markdown
+kramdown:
+  # Use GitHub flavored markdown, including triple backtick fenced code blocks
+  input: GFM
+  # Jekyll 3 and GitHub Pages now support rouge for syntax highlighting
+  syntax_highlighter: rouge
+  syntax_highlighter_opts:
+    # Use existing pygments syntax highlighting css
+    css_class: 'highlight'
+
+# Pagination
+paginate: 5
+paginate_path: "/page/:num/"
+
+# Set the Sass partials directory, as we're using @imports
 sass:
-  style: :compressed
   sass_dir: _sass
+  style: :expanded # You might prefer to minify using :compressed
 
-# Build settings
-markdown  : kramdown
-#permalink : /:title/
+# Use the following plug-ins
+gems:
+  - jekyll-sitemap # Create a sitemap using the official Jekyll sitemap gem
+  - jekyll-feed # Create an Atom feed using the official Jekyll feed gem
+  - jekyll-gist
+  - jekyll-paginate
+  - jekyll-seo-tag
+  - jemoji
+
+# Exclude these files from your production _site
+exclude:
+  - Gemfile
+  - Gemfile.lock
+  - LICENSE
+  - README.md
+  - CNAME
