--- a/_config.yml
+++ b/_config.yml
@@ -17,13 +17,15 @@ avatar: https://avatars.githubusercontent.com/u/47776520?v=4
 
 # Your website URL (e.g. https://forever-jekyll.github.io or https://forever-jekyll.com)
 # Used for Sitemap.xml and your RSS feed
-url: https://jun7343.github.io/
+url: https://jun7343.github.io
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
 baseurl: ""
+
+image: /assets/images/space-x.jpg
 
 # Navigation menu
 navigation_links:
