--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Jun`s Blog
 
 # Short bio or description (displayed in the header)
-description: Jun Development Blog
+description: Jun`s Development Blog
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars.githubusercontent.com/u/47776520?v=4
