update: _config 수정

--- a/_config.yml
+++ b/_config.yml
@@ -32,8 +32,8 @@ navigation_links:
   - title: Blog
     url: /
 
-  - title: About
-    url: /about
+  #- title: About
+   # url: /about
 
   - title: Github
     url: https://github.com/jun7343
